--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -42,8 +42,8 @@
   version = "0.5.0"
 
 [[constraint]]
+  branch = "master"
   name = "github.com/jinzhu/gorm"
-  version = "1.9.1"
 
 [[constraint]]
   branch = "master"
